Responsive changes, updates

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 <div class="row">
                     <div class="col-md-7">
                         <a href="https://www.hackbca.com"><h2>hackBCA</h2></a>
-                        <p>I am currently one of the directors at hackBCA, a premier high school hackathon that occurs once a year at my school. This year, there will be 400 High School students in attendance who will spend 24 hours creating something awesome.</p>
+                        <p>I am currently one of the directors at hackBCA, a premier high school hackathon that occurs once a year at my school. My responsibilities include the livestream, coordinating with the school tech department for internet and power, as well as getting sponsors. This year, there will be 400 High School students in attendance who will spend 24 hours creating a game, app, hardware project, or any technology oriented project.</p>
                     </div>
-                    <div id="hackimg" class="col-md-5"></div>
+                    <div id="hackimg" class="imageformatbottom"></div>
                 </div>
             </div>
         </div>
@@ -46,10 +46,10 @@
         <div id="padthisleft">
             <div id="Project" class="container-fluid">
                 <div class="row">
-                    <div id="positivimg" class="col-md-5"></div>
+                    <div id="wcsimg" class="imageformat"></div>
                     <div class="col-md-7">
-                        <a href="http://www.jameslepone.com/positivity"><h2>Positivity</h2></a>
-                        <p>Positivity is a website built for uplifting or positive thoughts. Users go on the site and can post uplifting thoughts which are placed on the main page. Users can then like the most uplifting thoughts and they will rise to the top of the page.</p>
+                        <a href="http://www.instructables.com/id/Water-Conservation-System/"><h2>Water Conservation System</h2></a>
+                        <p>The water conservation system is an undersink device used to detect and stop the flow of water. This not only conserves water but can stop a sink from overflowing, causing damage to the home if left running accidentally. The WCS was developed in the Mechatronics Research Lab at The Bergen County Academies and won two awards at the North Jersey Regional Science Fair as well as being a winner of the North Jersey Steam Tank Competition. Also, check it out on <a href="https://github.com/Clink123/WCS">git hub</a>.</p>
                     </div>
                 </div>
             </div>
@@ -60,20 +60,20 @@
                 <div class="row">
                     <div class="col-md-7">
                         <a href="https://github.com/Clink123/ladysavantfoundation"><h2>Lady Savant Foundation Website</h2></a>
-                        <p>A website I built for the <a href="http://www.ladysavantfoundation.com">Lady Savant Foundation</a>, a foundation with a new mission each year. This year's mission is to build a school in Cambodia.</p>
+                        <p>A website I created and curently host and maintain for the <a href="http://www.ladysavantfoundation.com">Lady Savant Foundation</a>, a foundation with a new mission each year. This year's mission is to build a school in Cambodia.</p>
                     </div>
-                    <div id="lsfimg" class="col-md-5"></div>
+                    <div id="lsfimg" class="imageformatbottom"></div>
                 </div>
             </div>
         </div>
         <div id="padthisbottom"></div>
-        <div id="padthisleft">
+       <div id="padthisleft">
             <div id="Project" class="container-fluid">
                 <div class="row">
-                    <div id="wcsimg" class="col-md-5"></div>
+                    <div id="processorimg" class="imageformat"></div>
                     <div class="col-md-7">
-                        <a href="https://github.com/Clink123/WCS"><h2>Water Conservation System</h2></a>
-                        <p>The water conservation system is an undersink device used to detect and stop the flow of water. This not only conserves water but can stop a sink from overflowing, causing damage to the home if left running accidentally. The WCS was developed in the Mechatronics Research Lab at The Bergen County Academies and will be attending the 2017 North Jersey Regional Science Fair. Also, check out the <a href="http://www.instructables.com/id/Water-Conservation-System/">instructables</a>.</p>
+                        <h2>The 8-Bit Processor Project</h2>
+                        <p>The 8 Bit-Processor Project is a physical version of an 8 bit processor created on breadboards. Mine was created using matericals from a professor at Redeemer College, my computer science teacher, and <a href="http://eater.net">Ben Eater's</a> 8-Bit processor. Eventually, this project will be extended into designing a subset of the 6502 processor, which will be used as a curriculum for an elective at my school.</p>
                     </div>
                 </div>
             </div>
@@ -86,210 +86,47 @@
                         <h2><a href="https://signup.bergen.org">BCA Apps</h2></a>
                         <p>I am currently a working on an assortment of internal signup and request applications for my school. You can check it out on <a href="https://github.com/ATCS-BCA/bca-apps">GitHub</a>.</p>
                     </div>
-                    <div id="bcaappsimg" class="col-md-5"></div>
+                    <div id="bcaappsimg" class="imageformatbottom"></div>
                 </div>
             </div>
         </div>
         <div id="padthisbottom"></div>
-       <div id="padthisleft">
+        <div id="padthisleft">
             <div id="Project" class="container-fluid">
                 <div class="row">
-                    <div id="echoimg" class="col-md-5"></div>
+                    <div id="positivimg" class="imageformat"></div>
                     <div class="col-md-7">
-                        <a href="http://github.com/Clink123/nerdyvalentine/"><h2>Nerdy Valentine Amazon Echo App</h2></a>
-                        <p>An Amazon Alexa app that gives the user a nerdy pickup line when asked. It is based on the Space Facts example program and was my first Amazon Alexa App. This won best application at Code Day 2016 and is currently published on the Alexa Skills store.</p>
+                        <h2><a href="http://www.jameslepone.com/positivity">Positivity</h2></a>
+                        <p>Positivity is a website built for uplifting or positive thoughts. Users go on the site and can post uplifting thoughts which are placed on the main page. Users can then like the most uplifting thoughts and they will rise to the top of the page.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <div id="padthisbottom"></div>
+    <div id="contactmobile">
+        <div class="row" id="problemrow">
+            <h2 id="h2tagcontact">Contact</h2>
+            <br>
+            <a id="contactitem" class="col-md-2 col-md-offset-2" href="mailto:jameslepone@gmail.com"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><p>Mail</p></a>
+            <a id="contactitem" class="col-md-2" target="_blank" href="http://www.youtube.com/user/GeminiJets747"><span class="glyphicon glyphicon-expand" aria-hidden="true"></span><p>YouTube</p></a>
+            <a id="contactitem" class="col-md-2" target="_blank" href="http://github.com/jameslepone/"><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span><p>GitHub</p></a>
+            <a id="contactitem" class="col-md-2" target="_blank" href="https://resume.creddle.io/resume/dtmmn1ybt1"><span class="glyphicon glyphicon-file" aria-hidden="true"></span><p>Resume</p></a>
+        </div>
+    </div>
+        
     <div id="contact">
         <div class="row" id="problemrow">
             <h2 id="h2tagcontact">Contact</h2>
             <br>
             <a id="contactitem" class="col-md-1 col-md-offset-4" href="mailto:jameslepone@gmail.com"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><p>Mail</p></a>
             <a id="contactitem" class="col-md-1" target="_blank" href="http://www.youtube.com/user/GeminiJets747"><span class="glyphicon glyphicon-expand" aria-hidden="true"></span><p>YouTube</p></a>
-            <a id="contactitem" class="col-md-1" target="_blank" href="http://github.com/Clink123/"><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span><p>GitHub</p></a>
+            <a id="contactitem" class="col-md-1" target="_blank" href="http://github.com/jameslepone/"><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span><p>GitHub</p></a>
             <a id="contactitem" class="col-md-1" target="_blank" href="https://resume.creddle.io/resume/dtmmn1ybt1"><span class="glyphicon glyphicon-file" aria-hidden="true"></span><p>Resume</p></a>
         </div>
-
-        <!-- BEGIN: Signup Form Manual Code from Benchmark Email Ver 2.0 ------>
-
-        <script type="text/javascript">
-            function CheckField725339(fldName, frm) {
-                if (frm[fldName].length) {
-                    for (var i = 0, l = frm[fldName].length; i < l; i++) {
-                        if (frm[fldName].type == 'select-one') {
-                            if (frm[fldName][i].selected && i == 0 && frm[fldName][i].value == '') {
-                                return false;
-                            }
-                            if (frm[fldName][i].selected) {
-                                return true;
-                            }
-                        } else {
-                            if (frm[fldName][i].checked) {
-                                return true;
-                            }
-                        };
-                    }
-                    return false;
-                } else {
-                    if (frm[fldName].type == "checkbox") {
-                        return (frm[fldName].checked);
-                    } else if (frm[fldName].type == "radio") {
-                        return (frm[fldName].checked);
-                    } else {
-                        frm[fldName].focus();
-                        return (frm[fldName].value.length > 0);
-                    }
-                }
-            }
-
-            function rmspaces(x) {
-                var leftx = 0;
-                var rightx = x.length - 1;
-                while (x.charAt(leftx) == ' ') {
-                    leftx++;
-                }
-                while (x.charAt(rightx) == ' ') {
-                    --rightx;
-                }
-                var q = x.substr(leftx, rightx - leftx + 1);
-                if ((leftx == x.length) && (rightx == -1)) {
-                    q = '';
-                }
-                return (q);
-            }
-
-            function checkfield(data) {
-                if (rmspaces(data) == "") {
-                    return false;
-                } else {
-                    return true;
-                }
-            }
-
-            function isemail(data) {
-                var flag = false;
-                if (data.indexOf("@", 0) == -1 || data.indexOf("\\", 0) != -1 || data.indexOf("/", 0) != -1 || !checkfield(data) || data.indexOf(".", 0) == -1 || data.indexOf("@") == 0 || data.lastIndexOf(".") < data.lastIndexOf("@") || data.lastIndexOf(".") == (data.length - 1) || data.lastIndexOf("@") != data.indexOf("@") || data.indexOf(",", 0) != -1 || data.indexOf(":", 0) != -1 || data.indexOf(";", 0) != -1) {
-                    return flag;
-                } else {
-                    var temp = rmspaces(data);
-                    if (temp.indexOf(' ', 0) != -1) {
-                        flag = true;
-                    }
-                    var d3 = temp.lastIndexOf('.') + 4;
-                    var d4 = temp.substring(0, d3);
-                    var e2 = temp.length - temp.lastIndexOf('.') - 1;
-                    var i1 = temp.indexOf('@');
-                    if ((temp.charAt(i1 + 1) == '.') || (e2 < 1)) {
-                        flag = true;
-                    }
-                    return !flag;
-                }
-            }
-
-            function CheckFieldD725339(fldH, chkDD, chkMM, chkYY, reqd, frm) {
-                var retVal = true;
-                var dt = validDate725339(chkDD, chkMM, chkYY, frm);
-                var nDate = frm[chkMM].value + " " + frm[chkDD].value + " " + frm[chkYY].value;
-                if (dt == null && reqd == 1) {
-                    nDate = "";
-                    retVal = false;
-                } else if ((frm[chkDD].value != "" || frm[chkMM].value != "" || frm[chkYY].value != "") && dt == null) {
-                    retVal = false;
-                    nDate = "";
-                }
-                if (retVal) {
-                    frm[fldH].value = nDate;
-                }
-                return retVal;
-            }
-
-            function validDate725339(chkDD, chkMM, chkYY, frm) {
-                var objDate = null;
-                if (frm[chkDD].value != "" && frm[chkMM].value != "" && frm[chkYY].value != "") {
-                    var mSeconds = (new Date(frm[chkYY].value - 0, frm[chkMM].selectedIndex - 1, frm[chkDD].value - 0)).getTime();
-                    var objDate = new Date();
-                    objDate.setTime(mSeconds);
-                    if (objDate.getFullYear() != frm[chkYY].value - 0 || objDate.getMonth() != frm[chkMM].selectedIndex - 1 || objDate.getDate() != frm[chkDD].value - 0) {
-                        objDate = null;
-                    }
-                }
-                return objDate;
-            }
-
-            function _checkSubmit725339(frm) {
-                if (!CheckField725339("fldfirstname", frm)) {
-                    alert("Please enter the First Name");
-                    return false;
-                }
-                if (!isemail(frm["fldEmail"].value)) {
-                    alert("Please enter the Email");
-                    return false;
-                }
-                return true;
-            }
-        </script>
-        <div align="center">
-            <form style="display:inline;" action="https://lb.benchmarkemail.com//code/lbform" method=post name="frmLB725339" accept-charset="UTF-8" onsubmit="return _checkSubmit725339(this);">
-                <input type=hidden name=successurl value="http://www.benchmarkemail.com/Code/ThankYouOptin" />
-                <input type=hidden name=errorurl value="http://lb.benchmarkemail.com//Code/Error" />
-                <input type=hidden name=token value="mFcQnoBFKMTAgiQ4F2rnvOZXUawFafLCURGOYUE%2F6Zo25INw4ATiAA%3D%3D" />
-                <input type=hidden name=doubleoptin value="" />
-                <div class=bmform_outer725339 id=tblFormData725339>
-                    <div class=bmform_inner725339>
-                        <div class=bmform_head725339 id=tdHeader725339>
-                            <div class=bm_headetext725339>
-                                <h2>Signup For Updates</h2></div>
-                        </div>
-                        <div class=bmform_body725339>
-                            <div class=bmform_introtxt725339 id=tdIntro725339>
-                                <br>
-                            </div>
-                            <div id=tblFieldData725339>
-                                <div class="row">
-                                    <div class="col-md-3 col-md-offset-3">
-                                        <div class=bmform_frmtext725339 style="display:inline;">First Name <span style='color:#CC0000;font-size:125%;'> *</span> </div>
-                                        <br>
-                                        <input type=text style="display:inline;" class=bmform_frm725339 name=fldfirstname maxlength=100 />
-                                        <br>
-                                        <br>
-                                        <div class=bmform_frmtext725339 style="display:inline;">Email <span style='color:#CC0000;font-size:125%;'> *</span> </div>
-                                        <br>
-                                        <input type=text class=bmform_frm725339 name=fldEmail style="display:inline;" maxlength=100 />
-                                        <br>
-                                        <br>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <div class=bmform_frmtext725339 style="display:inline;">Last Name <span style='color:#34495e;font-size:125%;'> *</span></div>
-                                        <br>
-
-                                        <input type=text class=bmform_frm725339 name=fldlastname style="display:inline;" maxlength=100 />
-                                        <br>
-                                        <br>
-                                        <div class=bmform_frmtext725339 style="display:inline;">Affiliation <span style='color:#34495e;font-size:125%;'> *</span></div>
-                                        <br>
-                                        <input type=text class=bmform_frm725339 name=fldfield9 style="display:inline;" maxlength=100 />
-                                    </div>
-                                </div>
-                            </div>
-                            <div class=bmform_button725339>
-                                <input type="submit" id="btnSubmit" value="Submit" krydebug="1751" class=bmform_submit725339 />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </form>
-        </div>
-
-        <!-- END: Signup Form Manual Code from Benchmark Email Ver 2.0 ------>
-
-
     </div>
     <footer id="footer">
-        &copy; James Lepone 2016 | Made Using <a href="http://getbootstrap.com/">Bootstrap</a> and <a href="http://benchmarkemail.com/">Benchmark Email</a>
+        &copy; James Lepone 2017 | Made Using <a href="http://getbootstrap.com/">Bootstrap</a> and <a href="http://benchmarkemail.com/">Benchmark Email</a>
     </footer>
 </body>
 
